# pawntificate

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh
include/cxx/: make_array.hpp  random.hpp
include/pawntificate/: board.hpp  evaluate.hpp  uci_command.hpp
src/pawntificate/: board.cpp  evaluate.cpp
test/: CMakeLists.txt  test_board.cpp  test_evaluate.cpp  test_find_legal_moves.cpp  test_uci_command.cpp
tools/: CMakeLists.txt
tools/pawntificate-uci/: CMakeLists.txt  main.cpp
